Add ActorRef restart and ActorSystem restart benchmarks